@@ -231,6 +231,21 @@ const run = (): void => {
 
   {
     const tmp = mkTmp();
+    const input = path.join(tmp, "plain.txt");
+    fs.writeFileSync(input, "plain text input", "utf8");
+    const capture = captureTreeV0(input, limits);
+    const res = runArtifactAdapterV1({
+      selection: "auto",
+      enabledPlugins: ["unknown_plugin_name"],
+      inputPath: input,
+      capture,
+    });
+    assert(!res.ok, "unknown plugin name should fail closed even when auto adapter has no class match");
+    assertEq(res.failCode, "ADAPTER_PLUGIN_UNKNOWN", "expected unknown plugin fail code for auto unmatched");
+  }
+
+  {
+    const tmp = mkTmp();
     fs.writeFileSync(
       path.join(tmp, "manifest.json"),
       JSON.stringify({
